--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.9.4",
     "axios": "^0.21.1",
     "chokidar-cli": "^2.1.0",
+    "evergreen-ui": "^6.6.3",
     "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.11.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^0.2.4"
   },
